--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Install the following packages (Debian 12) before running the build scripts:
 
-autoconf automake bash bc bison build-essential cmake flex gawk git gperf help2man libtool libtool-bin libusb-1.0 ncurses-dev python3 python3-venv rsync texinfo unzip wget
+autoconf automake bash bc bison build-essential cmake flex gawk git gperf help2man libncurses-dev libtool libtool-bin libusb-1.0-0 python3 python3-venv rsync texinfo unzip wget
