--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Install the following packages (Debian 12) before running the build scripts:
 
-autoconf automake bash bc bison build-essential cmake flex gawk git gperf help2man libncurses-dev libtool libtool-bin libusb-1.0-0 python3 python3-venv rsync texinfo unzip wget
+autoconf automake bash bc bison build-essential cmake flex gawk git gperf help2man libncurses-dev libtool libtool-bin libusb-1.0-0 python3 python3-venv rsync texinfo unzip wget cpio
 
 Build the default wifi-enabled configuration (devkit-c1-8m.conf, suitable for the Espressif devkit-c1 and similar boards with 8MB FLASH and 8MB PSRAM):
 
